lorm 0.3.4 2017-4-24

[NEW]   add transaction example


lorm 0.3.0 2017-4-19

[NEW]   rewrite connection-pool, now connection-pool is built-in.
        cancel auto-reconnect.
        cancel single connection mode, add Hub(), unified management connection pool.


lorm 0.2.23 2017-3-16

[NEW]   support "not in" option
        db.pet.filter(id__ni=[1,2])


lorm 0.2.22 2017-1-4

[FIX]   fix slice bug


lorm 0.2.21 2017-1-3

[NEW]   compatible python3


lorm 0.2.20 2016-12-22

[DEL]   MysqlPool.__len__


lorm 0.2.19 2016-11-16

[NEW]   MysqlConnection.select_db
[NEW]   MysqlConnection.dup(**kwargs)


lorm 0.2.18 2016-10-1

[NEW]   support negative slice index. e.g. c.pets[-1:]
[NEW]   add 'values', 'flat' row-style
[FIX]   using count() implements __len__()
[FIX]   optimize count() and exists()


lorm 0.2.16 2016-9-30

[FIX]   'startswith', 'endswith', 'contains' can only support string type now.
[DEL]   remove 'join'


lorm 0.2.16 2016-9-28

[FIX]   fix 'startswith'


lorm 0.2.15 2016-9-28

[FIX]   fix 'in' operation with empty argument.


lorm 0.2.11 2016-8-25

[NEW]   MysqlConnection.dup
[NEW]   MysqlConnection.set_charset, autocommit, get_autocommit
[NEW]   MysqlPool.full

[FIX]   QuerySet.update, delete return value
[FIX]   improve README.rst and test.py


lorm 0.2.10 2016-8-25

[FIX]   improve README.rst
[FIX]   delete README.md


lorm 0.2.9 2016-8-22

[NEW]   MysqlPool: last_query
[NEW]   mysql_pool


lorm 0.2.8 2016-8-22

[NEW]   Connection: add begin, rollback, commit
[NEW]   QuerySet: add update, delete with argument.


lorm 0.2.3 2016-8-20

[NEW]   MysqlPool add max_connections


lorm 0.2.3 2016-8-20

[NEW]   add new argument: ignore

[FIX]   QuerySet.filter(xxx__in=[]) crushed when list is empty
[FIX]   execute_many returns affected row count.


lorm 0.2.1 2016-8-20

[FIX]   default: autoreconnect=False


lorm 0.2.0 2016-8-20

[NEW]   base on new mysql engine: pymysql
[NEW]   add callproc
[NEW]   threading safe
[NEW]   add MysqlPool
[NEW]   add test scripts
