@@ -1,7 +1,7 @@
 #coding: utf-8
 from setuptools import setup, find_packages
 
-__version__ = '0.3.4'
+__version__ = '0.3.5'
 
 setup(
     name         = "lorm",
