@@ -1,3 +1,8 @@
+lorm 0.3.5 2017-4-25
+
+[NEW]   support transaction in autocommit mode.
+
+
 lorm 0.3.4 2017-4-24
 
 [NEW]   add transaction example
